# minecraft-version-rs

./: Cargo.toml  README.md  build.rs
src/: lib.rs
