[package]
name = "minecraft-version"
version = "0.1.1"
edition = "2021"
description = "Exhaustive enum of Minecraft versions"
license = "Apache-2.0 OR MIT"
authors = ["Kisaragi Marine <kisaragi.effective@gmail.com>"]
keywords = ["minecraft"]
categories = ["parsing"]
repository = "https://github.com/KisaragiEffective/minecraft-version-rs"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[build-dependencies]
jiff = { version = "0.2.23", default-features = true, features = ["std", "alloc", "serde"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
